<resources>
    <string name="app_name">PHOTOBOMB</string>
    <string name="let_s_sign">Let’s Sign You In</string>
    <string name="welcome_back">Welcome back, you’ve been missed!</string>
    <string name="mobile">Mobile</string>
    <string name="new_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgetHeading">Forgot Password</string>
    <string name="forgetDiscription">Enter your registered mobile number to reset password.</string>
    <string name="forgetButton">Reset Password</string>
    <string name="newPass_Heading">Set new password</string>
    <string name="newPass_Discr">Create strong and secured new password</string>
    <string name="newPass_Button">Save Password</string>
    <string name="singUp_Heading">Let’s Sign Up!</string>
    <string name="signUp_Discr">Enter Your Details here!</string>
    <string name="agree">By creating an account, you agree to our</string>
    <string name="Term_condition">Term and Conditions</string>
    <string name="account_exist">Already have an account ?</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="premium_description">To maintain access to your groups and images passed 48hours</string>
    <string name="descriptionForAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>


    <!-- please check all text -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="default_notification_channel_id">Ash1a2s3h</string>

    <!--    fb login data-->
    <string name="facebook_app_id">342543941475827</string>
    <string name="fb_login_protocol_scheme">78c91b722d20a6be9a1dbe0171991a47</string>
    <string name="facebook_client_token">w5G662mc4o81BUzLaFO2xjZlnHw=</string>

</resources>