<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/app_bg"
    >

    <!-- <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="7dp"
         android:paddingVertical="7dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back_arrow"
         app:tint="@color/white"
         tools:ignore="MissingConstraints" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32sp"
        android:weightSum="100"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/let_s_sign"
            android:textColor="@color/text_heading"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/description"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="Email"
            style="@style/InputBox"
            android:outlineProvider="none"
            app:endIconMode="clear_text"
            app:placeholderText="Please enter your number"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailId"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/InputBox"
            android:hint="Password"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:placeholderText="Please enter your password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text|textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="right"
            android:text="Forget password ?"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Log_button"
            android:text="Sign In"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="------ OR Continue with ------ "
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/fb"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google"/>


        </LinearLayout>

        <TextView
            android:id="@+id/signUp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>